src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> json
Rule 1     json -> apertura_objeto contenido clausura_objeto
Rule 2     contenido -> empresas coma version coma firma
Rule 3     contenido -> empresas coma firma coma version
Rule 4     contenido -> empresas coma version
Rule 5     contenido -> empresas coma firma
Rule 6     contenido -> empresas
Rule 7     contenido -> version coma empresas coma firma
Rule 8     contenido -> firma coma empresas coma version
Rule 9     contenido -> version coma empresas
Rule 10    contenido -> firma coma empresas
Rule 11    contenido -> version coma firma coma empresas
Rule 12    contenido -> firma coma version coma empresas
Rule 13    version -> CLAVE_VERSION dos_puntos VALOR_NULL
Rule 14    version -> CLAVE_VERSION dos_puntos VALOR_STRING
Rule 15    version -> CLAVE_VERSION dos_puntos vacio
Rule 16    firma -> CLAVE_FIRMA_DIGITAL dos_puntos VALOR_NULL
Rule 17    firma -> CLAVE_FIRMA_DIGITAL dos_puntos VALOR_STRING
Rule 18    firma -> CLAVE_FIRMA_DIGITAL dos_puntos vacio
Rule 19    empresas -> CLAVE_EMPRESAS dos_puntos apertura_lista lista_empresas clausura_lista
Rule 20    empresas -> CLAVE_EMPRESAS dos_puntos apertura_lista vacio clausura_lista
Rule 21    empresas -> CLAVE_EMPRESAS dos_puntos vacio
Rule 22    empresas -> vacio
Rule 23    lista_empresas -> apertura_objeto empresa clausura_objeto coma lista_empresas
Rule 24    lista_empresas -> apertura_objeto empresa clausura_objeto
Rule 25    lista_empresas -> apertura_objeto empresa clausura_objeto coma
Rule 26    empresa -> nombre_empresa coma fundacion coma direccion coma ingresos_anuales coma pyme coma link coma departamentos
Rule 27    empresa -> nombre_empresa coma fundacion coma ingresos_anuales coma pyme coma link coma departamentos
Rule 28    empresa -> nombre_empresa coma fundacion coma direccion coma ingresos_anuales coma pyme coma departamentos
Rule 29    empresa -> nombre_empresa coma fundacion coma ingresos_anuales coma pyme coma departamentos
Rule 30    nombre_empresa -> CLAVE_NOMBRE_EMPRESA dos_puntos VALOR_STRING
Rule 31    nombre_empresa -> CLAVE_NOMBRE_EMPRESA dos_puntos vacio
Rule 32    nombre_empresa -> vacio
Rule 33    fundacion -> CLAVE_FUNDACION dos_puntos VALOR_ENTERO
Rule 34    fundacion -> CLAVE_FUNDACION dos_puntos vacio
Rule 35    fundacion -> vacio
Rule 36    direccion -> CLAVE_DIRECCION dos_puntos VALOR_NULL
Rule 37    direccion -> CLAVE_DIRECCION dos_puntos apertura_objeto clausura_objeto
Rule 38    direccion -> CLAVE_DIRECCION dos_puntos apertura_objeto atributos_direccion clausura_objeto
Rule 39    direccion -> CLAVE_DIRECCION dos_puntos vacio
Rule 40    ingresos_anuales -> CLAVE_INGRESOS_ANUALES dos_puntos VALOR_REAL
Rule 41    ingresos_anuales -> CLAVE_INGRESOS_ANUALES dos_puntos vacio
Rule 42    ingresos_anuales -> vacio
Rule 43    pyme -> CLAVE_PYME dos_puntos VALOR_BOOL
Rule 44    pyme -> CLAVE_PYME dos_puntos vacio
Rule 45    pyme -> vacio
Rule 46    link -> CLAVE_LINK dos_puntos VALOR_NULL
Rule 47    link -> CLAVE_LINK dos_puntos VALOR_URL
Rule 48    link -> CLAVE_LINK dos_puntos vacio
Rule 49    departamentos -> CLAVE_DEPARTAMENTOS dos_puntos apertura_lista lista_departamentos clausura_lista
Rule 50    departamentos -> CLAVE_DEPARTAMENTOS dos_puntos apertura_lista vacio clausura_lista
Rule 51    departamentos -> CLAVE_DEPARTAMENTOS dos_puntos vacio
Rule 52    departamentos -> vacio
Rule 53    atributos_direccion -> calle coma ciudad coma pais
Rule 54    atributos_direccion -> calle coma pais coma ciudad
Rule 55    atributos_direccion -> ciudad coma calle coma pais
Rule 56    atributos_direccion -> ciudad coma pais coma calle
Rule 57    atributos_direccion -> pais coma calle coma ciudad
Rule 58    atributos_direccion -> pais coma ciudad coma calle
Rule 59    calle -> CLAVE_CALLE dos_puntos VALOR_STRING
Rule 60    calle -> CLAVE_CALLE dos_puntos vacio
Rule 61    calle -> vacio
Rule 62    ciudad -> CLAVE_CIUDAD dos_puntos VALOR_STRING
Rule 63    ciudad -> CLAVE_CIUDAD dos_puntos vacio
Rule 64    ciudad -> vacio
Rule 65    pais -> CLAVE_PAIS dos_puntos VALOR_STRING
Rule 66    pais -> CLAVE_PAIS dos_puntos vacio
Rule 67    pais -> vacio
Rule 68    lista_departamentos -> apertura_objeto departamento clausura_objeto coma lista_departamentos
Rule 69    lista_departamentos -> apertura_objeto departamento clausura_objeto
Rule 70    lista_departamentos -> apertura_objeto departamento clausura_objeto coma
Rule 71    departamento -> nombre_departamento coma subdepartamentos coma jefe
Rule 72    departamento -> nombre_departamento coma jefe coma subdepartamentos
Rule 73    departamento -> jefe coma nombre_departamento coma subdepartamentos
Rule 74    departamento -> nombre_departamento coma subdepartamentos
Rule 75    departamento -> subdepartamentos coma nombre_departamento coma jefe
Rule 76    departamento -> subdepartamentos coma jefe coma nombre_departamento
Rule 77    departamento -> jefe coma subdepartamentos coma nombre_departamento
Rule 78    departamento -> subdepartamentos coma nombre_departamento
Rule 79    nombre_departamento -> CLAVE_NOMBRE dos_puntos VALOR_STRING
Rule 80    nombre_departamento -> CLAVE_NOMBRE dos_puntos vacio
Rule 81    nombre_departamento -> vacio
Rule 82    jefe -> CLAVE_JEFE dos_puntos VALOR_NULL
Rule 83    jefe -> CLAVE_JEFE dos_puntos VALOR_STRING
Rule 84    jefe -> CLAVE_JEFE dos_puntos vacio
Rule 85    subdepartamentos -> CLAVE_SUBDEPARTAMENTOS dos_puntos apertura_lista lista_subdepartamentos clausura_lista
Rule 86    subdepartamentos -> CLAVE_SUBDEPARTAMENTOS dos_puntos apertura_lista vacio clausura_lista
Rule 87    subdepartamentos -> CLAVE_SUBDEPARTAMENTOS dos_puntos vacio
Rule 88    subdepartamentos -> vacio
Rule 89    lista_subdepartamentos -> apertura_objeto subdepartamento clausura_objeto coma lista_subdepartamentos
Rule 90    lista_subdepartamentos -> apertura_objeto subdepartamento clausura_objeto
Rule 91    lista_subdepartamentos -> apertura_objeto subdepartamento clausura_objeto coma
Rule 92    subdepartamento -> nombre_subdepartamento coma empleados coma jefe
Rule 93    subdepartamento -> nombre_subdepartamento coma jefe coma empleados
Rule 94    subdepartamento -> jefe coma nombre_subdepartamento coma empleados
Rule 95    subdepartamento -> nombre_subdepartamento coma empleados
Rule 96    subdepartamento -> empleados coma nombre_subdepartamento coma jefe
Rule 97    subdepartamento -> empleados coma jefe coma nombre_subdepartamento
Rule 98    subdepartamento -> jefe coma empleados coma nombre_subdepartamento
Rule 99    subdepartamento -> empleados coma nombre_subdepartamento
Rule 100   subdepartamento -> nombre_subdepartamento coma jefe
Rule 101   subdepartamento -> jefe coma nombre_subdepartamento
Rule 102   subdepartamento -> nombre_subdepartamento
Rule 103   nombre_subdepartamento -> CLAVE_NOMBRE dos_puntos VALOR_STRING
Rule 104   nombre_subdepartamento -> CLAVE_NOMBRE dos_puntos vacio
Rule 105   nombre_subdepartamento -> vacio
Rule 106   empleados -> CLAVE_EMPLEADOS dos_puntos VALOR_NULL
Rule 107   empleados -> CLAVE_EMPLEADOS dos_puntos apertura_lista clausura_lista
Rule 108   empleados -> CLAVE_EMPLEADOS dos_puntos apertura_lista lista_empleados clausura_lista
Rule 109   empleados -> CLAVE_EMPLEADOS dos_puntos vacio
Rule 110   lista_empleados -> apertura_objeto empleado clausura_objeto coma lista_empleados
Rule 111   lista_empleados -> apertura_objeto empleado clausura_objeto
Rule 112   lista_empleados -> apertura_objeto empleado clausura_objeto coma
Rule 113   empleado -> nombre_empleado coma edad coma cargo coma salario coma activo coma fecha_contratacion coma proyectos
Rule 114   empleado -> nombre_empleado coma cargo coma salario coma activo coma fecha_contratacion coma proyectos
Rule 115   empleado -> nombre_empleado coma edad coma cargo coma salario coma activo coma fecha_contratacion
Rule 116   empleado -> nombre_empleado coma cargo coma salario coma activo coma fecha_contratacion
Rule 117   nombre_empleado -> CLAVE_NOMBRE dos_puntos VALOR_STRING
Rule 118   nombre_empleado -> CLAVE_NOMBRE dos_puntos vacio
Rule 119   nombre_empleado -> vacio
Rule 120   edad -> CLAVE_EDAD dos_puntos VALOR_NULL
Rule 121   edad -> CLAVE_EDAD dos_puntos VALOR_ENTERO
Rule 122   edad -> CLAVE_EDAD dos_puntos vacio
Rule 123   cargo -> CLAVE_CARGO dos_puntos VALOR_CARGO
Rule 124   cargo -> CLAVE_CARGO dos_puntos vacio
Rule 125   cargo -> vacio
Rule 126   salario -> CLAVE_SALARIO dos_puntos VALOR_REAL
Rule 127   salario -> CLAVE_SALARIO dos_puntos vacio
Rule 128   salario -> vacio
Rule 129   activo -> CLAVE_ACTIVO dos_puntos VALOR_BOOL
Rule 130   activo -> CLAVE_ACTIVO dos_puntos vacio
Rule 131   activo -> vacio
Rule 132   fecha_contratacion -> CLAVE_FECHA_CONTRATACION dos_puntos VALOR_FECHA
Rule 133   fecha_contratacion -> CLAVE_FECHA_CONTRATACION dos_puntos vacio
Rule 134   fecha_contratacion -> vacio
Rule 135   proyectos -> CLAVE_PROYECTOS dos_puntos VALOR_NULL
Rule 136   proyectos -> CLAVE_PROYECTOS dos_puntos apertura_lista clausura_lista
Rule 137   proyectos -> CLAVE_PROYECTOS dos_puntos apertura_lista lista_proyectos clausura_lista
Rule 138   proyectos -> CLAVE_PROYECTOS dos_puntos vacio
Rule 139   lista_proyectos -> apertura_objeto proyecto clausura_objeto coma lista_proyectos
Rule 140   lista_proyectos -> apertura_objeto proyecto clausura_objeto
Rule 141   lista_proyectos -> apertura_objeto proyecto clausura_objeto coma
Rule 142   proyecto -> nombre_proyecto coma estado coma fecha_inicio coma fecha_fin
Rule 143   proyecto -> nombre_proyecto coma estado coma fecha_inicio
Rule 144   proyecto -> nombre_proyecto coma fecha_inicio coma fecha_fin
Rule 145   proyecto -> nombre_proyecto coma fecha_inicio
Rule 146   nombre_proyecto -> CLAVE_NOMBRE dos_puntos VALOR_STRING
Rule 147   nombre_proyecto -> CLAVE_NOMBRE dos_puntos vacio
Rule 148   nombre_proyecto -> vacio
Rule 149   estado -> CLAVE_ESTADO dos_puntos VALOR_NULL
Rule 150   estado -> CLAVE_ESTADO dos_puntos VALOR_ESTADO
Rule 151   estado -> CLAVE_ESTADO dos_puntos vacio
Rule 152   fecha_inicio -> CLAVE_FECHA_INICIO dos_puntos VALOR_FECHA
Rule 153   fecha_inicio -> CLAVE_FECHA_INICIO dos_puntos vacio
Rule 154   fecha_inicio -> vacio
Rule 155   fecha_fin -> CLAVE_FECHA_FIN dos_puntos VALOR_NULL
Rule 156   fecha_fin -> CLAVE_FECHA_FIN dos_puntos VALOR_FECHA
Rule 157   fecha_fin -> CLAVE_FECHA_FIN dos_puntos vacio
Rule 158   apertura_objeto -> APERTURA_OBJETO
Rule 159   apertura_objeto -> vacio
Rule 160   clausura_objeto -> CLAUSURA_OBJETO
Rule 161   clausura_objeto -> vacio
Rule 162   clausura_objeto -> COMA CLAUSURA_OBJETO
Rule 163   apertura_lista -> APERTURA_LISTA
Rule 164   apertura_lista -> vacio
Rule 165   clausura_lista -> CLAUSURA_LISTA
Rule 166   clausura_lista -> vacio
Rule 167   dos_puntos -> DOS_PUNTOS
Rule 168   dos_puntos -> vacio
Rule 169   coma -> COMA
Rule 170   coma -> vacio
Rule 171   coma -> COMA coma
Rule 172   vacio -> <empty>

Terminals, with rules where they appear

APERTURA_LISTA       : 163
APERTURA_OBJETO      : 158
CLAUSURA_LISTA       : 165
CLAUSURA_OBJETO      : 160 162
CLAVE_ACTIVO         : 129 130
CLAVE_CALLE          : 59 60
CLAVE_CARGO          : 123 124
CLAVE_CIUDAD         : 62 63
CLAVE_DEPARTAMENTOS  : 49 50 51
CLAVE_DIRECCION      : 36 37 38 39
CLAVE_EDAD           : 120 121 122
CLAVE_EMPLEADOS      : 106 107 108 109
CLAVE_EMPRESAS       : 19 20 21
CLAVE_ESTADO         : 149 150 151
CLAVE_FECHA_CONTRATACION : 132 133
CLAVE_FECHA_FIN      : 155 156 157
CLAVE_FECHA_INICIO   : 152 153
CLAVE_FIRMA_DIGITAL  : 16 17 18
CLAVE_FUNDACION      : 33 34
CLAVE_INGRESOS_ANUALES : 40 41
CLAVE_JEFE           : 82 83 84
CLAVE_LINK           : 46 47 48
CLAVE_NOMBRE         : 79 80 103 104 117 118 146 147
CLAVE_NOMBRE_EMPRESA : 30 31
CLAVE_PAIS           : 65 66
CLAVE_PROYECTOS      : 135 136 137 138
CLAVE_PYME           : 43 44
CLAVE_SALARIO        : 126 127
CLAVE_SUBDEPARTAMENTOS : 85 86 87
CLAVE_VERSION        : 13 14 15
COMA                 : 162 169 171
DOS_PUNTOS           : 167
VALOR_BOOL           : 43 129
VALOR_CARGO          : 123
VALOR_ENTERO         : 33 121
VALOR_ESTADO         : 150
VALOR_FECHA          : 132 152 156
VALOR_NULL           : 13 16 36 46 82 106 120 135 149 155
VALOR_REAL           : 40 126
VALOR_STRING         : 14 17 30 59 62 65 79 83 103 117 146
VALOR_URL            : 47
error                : 

Nonterminals, with rules where they appear

activo               : 113 114 115 116
apertura_lista       : 19 20 49 50 85 86 107 108 136 137
apertura_objeto      : 1 23 24 25 37 38 68 69 70 89 90 91 110 111 112 139 140 141
atributos_direccion  : 38
calle                : 53 54 55 56 57 58
cargo                : 113 114 115 116
ciudad               : 53 54 55 56 57 58
clausura_lista       : 19 20 49 50 85 86 107 108 136 137
clausura_objeto      : 1 23 24 25 37 38 68 69 70 89 90 91 110 111 112 139 140 141
coma                 : 2 2 3 3 4 5 7 7 8 8 9 10 11 11 12 12 23 25 26 26 26 26 26 26 27 27 27 27 27 28 28 28 28 28 29 29 29 29 53 53 54 54 55 55 56 56 57 57 58 58 68 70 71 71 72 72 73 73 74 75 75 76 76 77 77 78 89 91 92 92 93 93 94 94 95 96 96 97 97 98 98 99 100 101 110 112 113 113 113 113 113 113 114 114 114 114 114 115 115 115 115 115 116 116 116 116 139 141 142 142 142 143 143 144 144 145 171
contenido            : 1
departamento         : 68 69 70
departamentos        : 26 27 28 29
direccion            : 26 28
dos_puntos           : 13 14 15 16 17 18 19 20 21 30 31 33 34 36 37 38 39 40 41 43 44 46 47 48 49 50 51 59 60 62 63 65 66 79 80 82 83 84 85 86 87 103 104 106 107 108 109 117 118 120 121 122 123 124 126 127 129 130 132 133 135 136 137 138 146 147 149 150 151 152 153 155 156 157
edad                 : 113 115
empleado             : 110 111 112
empleados            : 92 93 94 95 96 97 98 99
empresa              : 23 24 25
empresas             : 2 3 4 5 6 7 8 9 10 11 12
estado               : 142 143
fecha_contratacion   : 113 114 115 116
fecha_fin            : 142 144
fecha_inicio         : 142 143 144 145
firma                : 2 3 5 7 8 10 11 12
fundacion            : 26 27 28 29
ingresos_anuales     : 26 27 28 29
jefe                 : 71 72 73 75 76 77 92 93 94 96 97 98 100 101
json                 : 0
link                 : 26 27
lista_departamentos  : 49 68
lista_empleados      : 108 110
lista_empresas       : 19 23
lista_proyectos      : 137 139
lista_subdepartamentos : 85 89
nombre_departamento  : 71 72 73 74 75 76 77 78
nombre_empleado      : 113 114 115 116
nombre_empresa       : 26 27 28 29
nombre_proyecto      : 142 143 144 145
nombre_subdepartamento : 92 93 94 95 96 97 98 99 100 101 102
pais                 : 53 54 55 56 57 58
proyecto             : 139 140 141
proyectos            : 113 114
pyme                 : 26 27 28 29
salario              : 113 114 115 116
subdepartamento      : 89 90 91
subdepartamentos     : 71 72 73 74 75 76 77 78
vacio                : 15 18 20 21 22 31 32 34 35 39 41 42 44 45 48 50 51 52 60 61 63 64 66 67 80 81 84 86 87 88 104 105 109 118 119 122 124 125 127 128 130 131 133 134 138 147 148 151 153 154 157 159 161 164 166 168 170
version              : 2 3 4 7 8 9 11 12

Parsing method: LALR

state 0

    (0) S' -> . json
    (1) json -> . apertura_objeto contenido clausura_objeto
    (158) apertura_objeto -> . APERTURA_OBJETO
    (159) apertura_objeto -> . vacio
    (172) vacio -> .

    APERTURA_OBJETO shift and go to state 3
    CLAVE_EMPRESAS  reduce using rule 172 (vacio -> .)
    CLAVE_VERSION   reduce using rule 172 (vacio -> .)
    CLAVE_FIRMA_DIGITAL reduce using rule 172 (vacio -> .)
    CLAUSURA_OBJETO reduce using rule 172 (vacio -> .)
    COMA            reduce using rule 172 (vacio -> .)
    $end            reduce using rule 172 (vacio -> .)

    json                           shift and go to state 1
    apertura_objeto                shift and go to state 2
    vacio                          shift and go to state 4

state 1

    (0) S' -> json .



state 2

    (1) json -> apertura_objeto . contenido clausura_objeto
    (2) contenido -> . empresas coma version coma firma
    (3) contenido -> . empresas coma firma coma version
    (4) contenido -> . empresas coma version
    (5) contenido -> . empresas coma firma
    (6) contenido -> . empresas
    (7) contenido -> . version coma empresas coma firma
    (8) contenido -> . firma coma empresas coma version
    (9) contenido -> . version coma empresas
    (10) contenido -> . firma coma empresas
    (11) contenido -> . version coma firma coma empresas
    (12) contenido -> . firma coma version coma empresas
    (19) empresas -> . CLAVE_EMPRESAS dos_puntos apertura_lista lista_empresas clausura_lista
    (20) empresas -> . CLAVE_EMPRESAS dos_puntos apertura_lista vacio clausura_lista
    (21) empresas -> . CLAVE_EMPRESAS dos_puntos vacio
    (22) empresas -> . vacio
    (13) version -> . CLAVE_VERSION dos_puntos VALOR_NULL
    (14) version -> . CLAVE_VERSION dos_puntos VALOR_STRING
    (15) version -> . CLAVE_VERSION dos_puntos vacio
    (16) firma -> . CLAVE_FIRMA_DIGITAL dos_puntos VALOR_NULL
    (17) firma -> . CLAVE_FIRMA_DIGITAL dos_puntos VALOR_STRING
    (18) firma -> . CLAVE_FIRMA_DIGITAL dos_puntos vacio
    (172) vacio -> .

  ! shift/reduce conflict for CLAVE_VERSION resolved as shift
  ! shift/reduce conflict for CLAVE_FIRMA_DIGITAL resolved as shift
    CLAVE_EMPRESAS  shift and go to state 9
    CLAVE_VERSION   shift and go to state 11
    CLAVE_FIRMA_DIGITAL shift and go to state 12
    COMA            reduce using rule 172 (vacio -> .)
    CLAUSURA_OBJETO reduce using rule 172 (vacio -> .)
    $end            reduce using rule 172 (vacio -> .)

  ! CLAVE_VERSION   [ reduce using rule 172 (vacio -> .) ]
  ! CLAVE_FIRMA_DIGITAL [ reduce using rule 172 (vacio -> .) ]

    contenido                      shift and go to state 5
    empresas                       shift and go to state 6
    version                        shift and go to state 7
    firma                          shift and go to state 8
    vacio                          shift and go to state 10

state 3

    (158) apertura_objeto -> APERTURA_OBJETO .

    CLAVE_EMPRESAS  reduce using rule 158 (apertura_objeto -> APERTURA_OBJETO .)
    CLAVE_VERSION   reduce using rule 158 (apertura_objeto -> APERTURA_OBJETO .)
    CLAVE_FIRMA_DIGITAL reduce using rule 158 (apertura_objeto -> APERTURA_OBJETO .)
    CLAUSURA_OBJETO reduce using rule 158 (apertura_objeto -> APERTURA_OBJETO .)
    COMA            reduce using rule 158 (apertura_objeto -> APERTURA_OBJETO .)
    $end            reduce using rule 158 (apertura_objeto -> APERTURA_OBJETO .)
    CLAVE_NOMBRE_EMPRESA reduce using rule 158 (apertura_objeto -> APERTURA_OBJETO .)
    APERTURA_OBJETO reduce using rule 158 (apertura_objeto -> APERTURA_OBJETO .)
    CLAVE_FUNDACION reduce using rule 158 (apertura_objeto -> APERTURA_OBJETO .)
    CLAVE_DIRECCION reduce using rule 158 (apertura_objeto -> APERTURA_OBJETO .)
    CLAVE_INGRESOS_ANUALES reduce using rule 158 (apertura_objeto -> APERTURA_OBJETO .)
    CLAVE_PYME      reduce using rule 158 (apertura_objeto -> APERTURA_OBJETO .)
    CLAVE_LINK      reduce using rule 158 (apertura_objeto -> APERTURA_OBJETO .)
    CLAVE_DEPARTAMENTOS reduce using rule 158 (apertura_objeto -> APERTURA_OBJETO .)
    CLAUSURA_LISTA  reduce using rule 158 (apertura_objeto -> APERTURA_OBJETO .)
    CLAVE_CALLE     reduce using rule 158 (apertura_objeto -> APERTURA_OBJETO .)
    CLAVE_CIUDAD    reduce using rule 158 (apertura_objeto -> APERTURA_OBJETO .)
    CLAVE_PAIS      reduce using rule 158 (apertura_objeto -> APERTURA_OBJETO .)
    CLAVE_NOMBRE    reduce using rule 158 (apertura_objeto -> APERTURA_OBJETO .)
    CLAVE_JEFE      reduce using rule 158 (apertura_objeto -> APERTURA_OBJETO .)
    CLAVE_SUBDEPARTAMENTOS reduce using rule 158 (apertura_objeto -> APERTURA_OBJETO .)
    CLAVE_EMPLEADOS reduce using rule 158 (apertura_objeto -> APERTURA_OBJETO .)
    CLAVE_EDAD      reduce using rule 158 (apertura_objeto -> APERTURA_OBJETO .)
    CLAVE_CARGO     reduce using rule 158 (apertura_objeto -> APERTURA_OBJETO .)
    CLAVE_SALARIO   reduce using rule 158 (apertura_objeto -> APERTURA_OBJETO .)
    CLAVE_ACTIVO    reduce using rule 158 (apertura_objeto -> APERTURA_OBJETO .)
    CLAVE_FECHA_CONTRATACION reduce using rule 158 (apertura_objeto -> APERTURA_OBJETO .)
    CLAVE_PROYECTOS reduce using rule 158 (apertura_objeto -> APERTURA_OBJETO .)
    CLAVE_ESTADO    reduce using rule 158 (apertura_objeto -> APERTURA_OBJETO .)
    CLAVE_FECHA_INICIO reduce using rule 158 (apertura_objeto -> APERTURA_OBJETO .)
    CLAVE_FECHA_FIN reduce using rule 158 (apertura_objeto -> APERTURA_OBJETO .)


state 4

    (159) apertura_objeto -> vacio .

    CLAVE_EMPRESAS  reduce using rule 159 (apertura_objeto -> vacio .)
    CLAVE_VERSION   reduce using rule 159 (apertura_objeto -> vacio .)
    CLAVE_FIRMA_DIGITAL reduce using rule 159 (apertura_objeto -> vacio .)
    CLAUSURA_OBJETO reduce using rule 159 (apertura_objeto -> vacio .)
    COMA            reduce using rule 159 (apertura_objeto -> vacio .)
    $end            reduce using rule 159 (apertura_objeto -> vacio .)
    APERTURA_OBJETO reduce using rule 159 (apertura_objeto -> vacio .)
    CLAVE_NOMBRE_EMPRESA reduce using rule 159 (apertura_objeto -> vacio .)
    CLAVE_FUNDACION reduce using rule 159 (apertura_objeto -> vacio .)
    CLAVE_DIRECCION reduce using rule 159 (apertura_objeto -> vacio .)
    CLAVE_INGRESOS_ANUALES reduce using rule 159 (apertura_objeto -> vacio .)
    CLAVE_PYME      reduce using rule 159 (apertura_objeto -> vacio .)
    CLAVE_LINK      reduce using rule 159 (apertura_objeto -> vacio .)
    CLAVE_DEPARTAMENTOS reduce using rule 159 (apertura_objeto -> vacio .)
    CLAUSURA_LISTA  reduce using rule 159 (apertura_objeto -> vacio .)
    CLAVE_NOMBRE    reduce using rule 159 (apertura_objeto -> vacio .)
    CLAVE_JEFE      reduce using rule 159 (apertura_objeto -> vacio .)
    CLAVE_SUBDEPARTAMENTOS reduce using rule 159 (apertura_objeto -> vacio .)
    CLAVE_EMPLEADOS reduce using rule 159 (apertura_objeto -> vacio .)
    CLAVE_EDAD      reduce using rule 159 (apertura_objeto -> vacio .)
    CLAVE_CARGO     reduce using rule 159 (apertura_objeto -> vacio .)
    CLAVE_SALARIO   reduce using rule 159 (apertura_objeto -> vacio .)
    CLAVE_ACTIVO    reduce using rule 159 (apertura_objeto -> vacio .)
    CLAVE_FECHA_CONTRATACION reduce using rule 159 (apertura_objeto -> vacio .)
    CLAVE_PROYECTOS reduce using rule 159 (apertura_objeto -> vacio .)
    CLAVE_ESTADO    reduce using rule 159 (apertura_objeto -> vacio .)
    CLAVE_FECHA_INICIO reduce using rule 159 (apertura_objeto -> vacio .)
    CLAVE_FECHA_FIN reduce using rule 159 (apertura_objeto -> vacio .)


state 5

    (1) json -> apertura_objeto contenido . clausura_objeto
    (160) clausura_objeto -> . CLAUSURA_OBJETO
    (161) clausura_objeto -> . vacio
    (162) clausura_objeto -> . COMA CLAUSURA_OBJETO
    (172) vacio -> .

    CLAUSURA_OBJETO shift and go to state 14
    COMA            shift and go to state 16
    $end            reduce using rule 172 (vacio -> .)

    clausura_objeto                shift and go to state 13
    vacio                          shift and go to state 15

state 6

    (2) contenido -> empresas . coma version coma firma
    (3) contenido -> empresas . coma firma coma version
    (4) contenido -> empresas . coma version
    (5) contenido -> empresas . coma firma
    (6) contenido -> empresas .
    (169) coma -> . COMA
    (170) coma -> . vacio
    (171) coma -> . COMA coma
    (172) vacio -> .

  ! shift/reduce conflict for COMA resolved as shift
    CLAUSURA_OBJETO reduce using rule 6 (contenido -> empresas .)
    $end            reduce using rule 6 (contenido -> empresas .)
    COMA            shift and go to state 18
    CLAVE_VERSION   reduce using rule 172 (vacio -> .)
    CLAVE_FIRMA_DIGITAL reduce using rule 172 (vacio -> .)

  ! COMA            [ reduce using rule 6 (contenido -> empresas .) ]

    coma                           shift and go to state 17
    vacio                          shift and go to state 19

state 7

    (7) contenido -> version . coma empresas coma firma
    (9) contenido -> version . coma empresas
    (11) contenido -> version . coma firma coma empresas
    (169) coma -> . COMA
    (170) coma -> . vacio
    (171) coma -> . COMA coma
    (172) vacio -> .

  ! shift/reduce conflict for COMA resolved as shift
    COMA            shift and go to state 18
    CLAVE_EMPRESAS  reduce using rule 172 (vacio -> .)
    CLAVE_FIRMA_DIGITAL reduce using rule 172 (vacio -> .)
    CLAUSURA_OBJETO reduce using rule 172 (vacio -> .)
    $end            reduce using rule 172 (vacio -> .)

  ! COMA            [ reduce using rule 172 (vacio -> .) ]

    coma                           shift and go to state 20
    vacio                          shift and go to state 19

state 8

    (8) contenido -> firma . coma empresas coma version
    (10) contenido -> firma . coma empresas
    (12) contenido -> firma . coma version coma empresas
    (169) coma -> . COMA
    (170) coma -> . vacio
    (171) coma -> . COMA coma
    (172) vacio -> .

  ! shift/reduce conflict for COMA resolved as shift
    COMA            shift and go to state 18
    CLAVE_EMPRESAS  reduce using rule 172 (vacio -> .)
    CLAVE_VERSION   reduce using rule 172 (vacio -> .)
    CLAUSURA_OBJETO reduce using rule 172 (vacio -> .)
    $end            reduce using rule 172 (vacio -> .)

  ! COMA            [ reduce using rule 172 (vacio -> .) ]

    coma                           shift and go to state 21
    vacio                          shift and go to state 19

state 9

    (19) empresas -> CLAVE_EMPRESAS . dos_puntos apertura_lista lista_empresas clausura_lista
    (20) empresas -> CLAVE_EMPRESAS . dos_puntos apertura_lista vacio clausura_lista
    (21) empresas -> CLAVE_EMPRESAS . dos_puntos vacio
    (167) dos_puntos -> . DOS_PUNTOS
    (168) dos_puntos -> . vacio
    (172) vacio -> .

    DOS_PUNTOS      shift and go to state 24
    APERTURA_LISTA  reduce using rule 172 (vacio -> .)
    APERTURA_OBJETO reduce using rule 172 (vacio -> .)
    CLAUSURA_LISTA  reduce using rule 172 (vacio -> .)
    CLAVE_NOMBRE_EMPRESA reduce using rule 172 (vacio -> .)
    CLAUSURA_OBJETO reduce using rule 172 (vacio -> .)
    COMA            reduce using rule 172 (vacio -> .)
    CLAVE_FUNDACION reduce using rule 172 (vacio -> .)
    CLAVE_DIRECCION reduce using rule 172 (vacio -> .)
    CLAVE_INGRESOS_ANUALES reduce using rule 172 (vacio -> .)
    CLAVE_PYME      reduce using rule 172 (vacio -> .)
    CLAVE_LINK      reduce using rule 172 (vacio -> .)
    CLAVE_DEPARTAMENTOS reduce using rule 172 (vacio -> .)
    CLAVE_VERSION   reduce using rule 172 (vacio -> .)
    CLAVE_FIRMA_DIGITAL reduce using rule 172 (vacio -> .)
    $end            reduce using rule 172 (vacio -> .)

    dos_puntos                     shift and go to state 22
    vacio                          shift and go to state 23

state 10

    (22) empresas -> vacio .

    COMA            reduce using rule 22 (empresas -> vacio .)
    CLAVE_VERSION   reduce using rule 22 (empresas -> vacio .)
    CLAVE_FIRMA_DIGITAL reduce using rule 22 (empresas -> vacio .)
    CLAUSURA_OBJETO reduce using rule 22 (empresas -> vacio .)
    $end            reduce using rule 22 (empresas -> vacio .)


state 11

    (13) version -> CLAVE_VERSION . dos_puntos VALOR_NULL
    (14) version -> CLAVE_VERSION . dos_puntos VALOR_STRING
    (15) version -> CLAVE_VERSION . dos_puntos vacio
    (167) dos_puntos -> . DOS_PUNTOS
    (168) dos_puntos -> . vacio
    (172) vacio -> .

    DOS_PUNTOS      shift and go to state 24
    VALOR_NULL      reduce using rule 172 (vacio -> .)
    VALOR_STRING    reduce using rule 172 (vacio -> .)
    COMA            reduce using rule 172 (vacio -> .)
    CLAVE_EMPRESAS  reduce using rule 172 (vacio -> .)
    CLAVE_FIRMA_DIGITAL reduce using rule 172 (vacio -> .)
    CLAUSURA_OBJETO reduce using rule 172 (vacio -> .)
    $end            reduce using rule 172 (vacio -> .)
